# ChessPlusPlus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chess.cpp
design/: chess_engine_data_structures.md  chess_library_api.md  piece_square_tables.md
include/: chess.hpp
include/chess/: Board.hpp  Eval.hpp  Move.hpp  MoveGenerator.hpp  PieceSquareTables.hpp  Search.hpp  TranspositionTable.hpp  ZobristHasher.hpp  types.hpp
include/chess/internal/: Bitboard.hpp
src/: Board.cpp  Eval.cpp  Search.cpp  utils.cpp
src/internal/: Bitboard.cpp
tests/: CMakeLists.txt  board_tests.cpp  search_tests.cpp
